--- a/src/brands/yabbr/custom.css
+++ b/src/brands/yabbr/custom.css
@@ -19,6 +19,7 @@
   --ifm-toc-bg: #e9e9e9; /* do not change */
   --ifm-color-text: black; /* do not change */
   --ifm-code-font-size: 95%; /* do not change */
+  --ifm-color-text-shadow: #1582d8;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1); /* do not change */
 
 }
@@ -37,7 +38,7 @@
   --ifm-color-dropdown-secondary: rgb(64, 64, 64); /* do not change */
   --ifm-toc: #b9b9b9; /* do not change */
   --ifm-toc-bg: #242424; /* do not change */
-
+  --ifm-color-text-shadow: #1582d8;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
@@ -776,5 +777,8 @@ summary {
 }
 
 
-
+.white {
+  color: white;
+  text-shadow: 1px 1px 2px var(--ifm-color-text-shadow);
+}
 
